--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,19 +31,20 @@ dependencies:
   pin_code_fields: ^7.3.0
   flutter_svg: ^0.22.0
   shimmer: ^2.0.0
-  image_picker: ^0.7.4
+  image_picker: ^0.8.4+5
   geolocator: ^7.6.2
   geocoding: ^2.0.1
   app_settings: 4.1.1
   flutter_typeahead: ^3.2.3
   flutter_spinkit: ^5.1.0
   http:
-  dio: ^4.0.0
   flutter_keyboard_visibility: ^5.1.0
   flutter_polyline_points: ^0.2.6
+  cached_network_image: ^3.2.0
   google_maps_flutter: ^2.0.2
   permission_handler: ^8.3.0
   collection: ^1.15.0
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -81,13 +82,14 @@ flutter:
     - family: Monoton
       fonts:
         - asset: fonts/Monoton-Regular.ttf
-    #       - asset: fonts/Schyler-Italic.ttf
-    #         style: italic
+
+    - family: ZenKurenaido
+      fonts:
+        - asset: fonts/ZenKurenaido-Regular.ttf
+
     - family: FasterOne
       fonts:
         - asset: fonts/FasterOne-Regular.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
